added typewriter plugin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Joke generator</title>
     <meta charset="UTF-8" />
-
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
   </head>
 
