--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Joke generator</title>
     <meta charset="UTF-8" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link href="src/style.css" rel="stylesheet" type="text/css" />
   </head>
 
